--- a/Applications/Shutter/src/main/resources/shutter_app_ui.fxml
+++ b/Applications/Shutter/src/main/resources/shutter_app_ui.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="322.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.ac.technion.cs.smarthouse.applications.shutter.shutter_app_uiController">
    <children>
       <Button fx:id="openButton" layoutX="73.0" layoutY="99.0" mnemonicParsing="false" onAction="#openClick" text="Open" />
       <Button fx:id="closeButton" layoutX="176.0" layoutY="99.0" mnemonicParsing="false" onAction="#closeClick" text="Close" />
-      <Button fx:id="autoButton" layoutX="72.0" layoutY="164.0" mnemonicParsing="false" onAction="#autoClick" prefHeight="25.0" prefWidth="170.0" text="Automatic Scheduling" />
+      <Button fx:id="autoButton" layoutX="72.0" layoutY="164.0" mnemonicParsing="false" onAction="#toField" prefHeight="25.0" prefWidth="170.0" text="Automatic Scheduling" />
       <TextField fx:id="fromField" layoutX="73.0" layoutY="210.0" />
       <TextField fx:id="toField" layoutX="73.0" layoutY="257.0" />
       <Text layoutX="28.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="From" />
